# huffman

./: CMakeCache.txt  CMakeLists.txt  HUFFMAN.cbp  MAIN  Makefile  TESTING  cmake_install.cmake  file.in  file.txt
git/huffman/lib/: constants.h  huffman.cpp  my_reader.cpp  my_reader.h  my_writer.cpp  tree.cpp
git/huffman/test/: huffman_testing.cpp
git/huffman/util/: main.cpp
lib/: constants.h  huffman.cpp  huffman.h  my_reader.cpp  my_reader.h  my_writer.cpp  my_writer.h  tree.cpp  tree.h
test/: huffman_testing.cpp
util/: main.cpp
